--- a/index.html
+++ b/index.html
@@ -146,7 +146,10 @@
                                         <span><img src="/img/icons/more.png" alt="more"class="no-drag"> Подробнее</span>
                                     </div>
                                 </div>
-                                <div class="profile-button"></div>
+                                <div class="profile-button">
+                                    <button><span>Редактировать профиль</span></button>
+                                    <button><span>Ещё</span></button>
+                                </div>
                             </div>
                         </div>
                     </div>
