preview-panel first commit

--- a/index.html
+++ b/index.html
@@ -154,8 +154,24 @@
                         </div>
                     </div>
                     <div class="preview-panel">
-                        <div class="preview-panel-sections"></div>
-                        <div class="preview-panel-photo"></div>
+                        <div class="preview-panel__sections">
+                            <div class="preview-panel__sections-item"><img src="/img/icons/photo-icon.png" alt="photo">Фото</div>
+                            <div class="preview-panel__sections-item"><img src="/img/icons/music-icon.png" alt="musik">Музыка</div>
+                            <div class="preview-panel__sections-item"><img src="/img/icons/album-icon.png" alt="album">Альбомы</div>
+                            <div class="preview-panel__sections-item"><img src="/img/icons/clip-icon.png" alt="clips">Клипы</div>
+                            <div class="preview-panel__sections-item"><img src="/img/icons/articles-icon.png" alt="articles">Статьи</div>
+                        </div>
+                        <div class="preview-panel__content">
+                            <div class="preview-panel__content-photo">
+                                <img src="/img/photo/avatar-profile.jpg" alt="" class="no-drag">
+                                <img src="/img/photo/avatar-profile.jpg" alt="" class="no-drag">
+                                <img src="/img/photo/avatar-profile.jpg" alt="" class="no-drag">
+                            </div>
+                            <div class="preview-panel__content-buttons">
+                                <button>Загрузить фото</button>
+                                <button>Показать всё</button>
+                            </div>
+                        </div>
                     </div>
                     <div class="page__inner">
                         <div class="new-post">new-post</div>
