friends block first commit

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                                         <span><img src="/img/icons/more.png" alt="more"class="no-drag"> Подробнее</span>
                                     </div>
                                 </div>
-                                <div class="profile-button">
+                                <div class="profile-button no-drag">
                                     <button><span>Редактировать профиль</span></button>
                                     <button><span>Ещё</span></button>
                                 </div>
@@ -155,14 +155,14 @@
                     </div>
                     <div class="preview-panel">
                         <div class="preview-panel__sections">
-                            <div class="preview-panel__sections-item"><img src="/img/icons/photo-icon.png" alt="photo">Фото</div>
-                            <div class="preview-panel__sections-item"><img src="/img/icons/music-icon.png" alt="musik">Музыка</div>
-                            <div class="preview-panel__sections-item"><img src="/img/icons/album-icon.png" alt="album">Альбомы</div>
-                            <div class="preview-panel__sections-item"><img src="/img/icons/clip-icon.png" alt="clips">Клипы</div>
-                            <div class="preview-panel__sections-item"><img src="/img/icons/articles-icon.png" alt="articles">Статьи</div>
+                            <div class="preview-panel__sections-item"><img src="/img/icons/photo-icon.png" alt="photo"class="no-drag">Фото</div>
+                            <div class="preview-panel__sections-item"><img src="/img/icons/music-icon.png" alt="musik"class="no-drag">Музыка</div>
+                            <div class="preview-panel__sections-item"><img src="/img/icons/album-icon.png" alt="album"class="no-drag">Альбомы</div>
+                            <div class="preview-panel__sections-item"><img src="/img/icons/clip-icon.png" alt="clips"class="no-drag">Клипы</div>
+                            <div class="preview-panel__sections-item"><img src="/img/icons/articles-icon.png" alt="articles"class="no-drag">Статьи</div>
                         </div>
                         <div class="preview-panel__content">
-                            <div class="preview-panel__content-photo">
+                            <div class="preview-panel__content-photo no-drag">
                                 <img src="/img/photo/avatar-profile.jpg" alt="" class="no-drag">
                                 <img src="/img/photo/avatar-profile.jpg" alt="" class="no-drag">
                                 <img src="/img/photo/avatar-profile.jpg" alt="" class="no-drag">
@@ -178,9 +178,47 @@
                         <div class="posts">post</div>
                     </div>
                     <div class="aside">   
-                        <div class="friends">friend Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid quidem enim doloremque mollitia. Ut, quidem ipsam ea minima in natus reprehenderit dolore porro beatae distinctio adipisci aliquid quia! Repudiandae, quaerat.
-                        Quasi, vitae. Culpa autem similique iusto libero, sed maiores porro quae tempora repellat nemo ipsam rerum eaque ullam magnam ad harum odit asperiores voluptates nesciunt dolorum ipsa quas. Rerum, laboriosam?
-                        Vel neque temporibus tenetur illo est! Ratione dolore nisi veniam maiores labore ab dolor explicabo, quae dicta perspiciatis asperiores ipsa? Quas non quos voluptas quis repellendus nobis voluptatum ex? Asperiores.</div>
+                        <div class="friends">
+                            <div class="friends__online-heading">Друзья онлайн<span>5</span></div>
+                            <div class="friends__online-wrapper">
+                                <div class="friends__online-wrapper-item">
+                                    <img src="/img/photo/friends-avatar.jpg" alt="">
+                                    <div>Иван</div>
+                                </div>
+                                <div class="friends__online-wrapper-item">
+                                    <img src="/img/photo/friends-avatar.jpg" alt="">
+                                    <div>Дарьян</div>
+                                </div>
+                                <div class="friends__online-wrapper-item">
+                                    <img src="/img/photo/friends-avatar.jpg" alt="">
+                                    <div>Баклан</div>
+                                </div>
+                                <div class="friends__online-wrapper-item">
+                                    <img src="/img/photo/friends-avatar.jpg" alt="">
+                                    <div>Вован</div>
+                                </div>
+                            </div>
+                            <div class="friends-line"></div>
+                            <div class="friends__heading">Друзья<span>74</span></div>
+                            <div class="friends__wrapper">
+                                <div class="friends__wrapper-item">
+                                    <img src="/img/photo/friends-avatar.jpg" alt="">
+                                    <div>Имран</div>
+                                </div>
+                                <div class="friends__wrapper-item">
+                                    <img src="/img/photo/friends-avatar.jpg" alt="">
+                                    <div>Елдан</div>
+                                </div>
+                                <div class="friends__wrapper-item">
+                                    <img src="/img/photo/friends-avatar.jpg" alt="">
+                                    <div>Морда</div>
+                                </div>
+                                <div class="friends__wrapper-item">
+                                    <img src="/img/photo/friends-avatar.jpg" alt="">
+                                    <div>Хулиган</div>
+                                </div>
+                            </div>
+                        </div>
                         <div class="gifts">gifts</div>
                         <div class="subscriptions">subscriptions</div>
                     </div> 
