--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                                 </div>
                                 <div class="friends__online-wrapper-item">
                                     <img src="/img/photo/friends-avatar.jpg" alt="" class="no-drag">
-                                    <div>Дарьян</div>
+                                    <div>Дарьянчбеквар</div>
                                 </div>
                                 <div class="friends__online-wrapper-item">
                                     <img src="/img/photo/friends-avatar.jpg" alt="" class="no-drag">
@@ -259,7 +259,7 @@
                                 </div>
                                 <div class="friends__wrapper-item">
                                     <img src="/img/photo/friends-avatar.jpg" alt="" class="no-drag">
-                                    <div>Морда</div>
+                                    <div>Елбунбеквардон</div>
                                 </div>
                                 <div class="friends__wrapper-item">
                                     <img src="/img/photo/friends-avatar.jpg" alt="" class="no-drag">
