--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
         <link rel="stylesheet" href="css/style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" >
         <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
-        
-        
+        <script>src="js/script.js"</script>
     </head>
     <body>
         <header class="header">
@@ -184,45 +183,30 @@
                                     <img src="/img/icons/clip-icon.png" alt="">
                                     <img src="/img/icons/articles-icon.png" alt="">
                                 </div>
-                                <div class="posts">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti pariatur fuga corrupti a officia beatae, necessitatibus earum dicta. Quam neque ipsa voluptas doloribus accusantium maiores dicta quis optio odio delectus.
-                                    Fuga repellat sapiente, ab quaerat nesciunt illo pariatur perferendis voluptatibus similique maxime amet temporibus aut dignissimos nobis quam adipisci aspernatur deserunt fugiat repellendus animi, est sint? Voluptatibus explicabo voluptatem eius.
-                                    Facere quam eius odio optio quibusdam? Vitae voluptate rerum deserunt nobis blanditiis alias dolores ex ipsum libero enim aliquam illum soluta illo officiis quo, debitis, ad voluptatum impedit a veniam.
-                                    Doloremque illum sequi architecto quis atque quod tempora excepturi unde ipsa amet. Error natus non architecto quasi laborum officia debitis aliquid reprehenderit velit, qui sed quos cumque ipsum voluptate doloribus.
-                                    Corrupti odio architecto quaerat, tempore, magni distinctio consectetur incidunt perspiciatis necessitatibus exercitationem, id deserunt quos nam! Corrupti voluptas nostrum velit cupiditate, minima necessitatibus temporibus, fugit exercitationem, nulla ut delectus sit.
-                                    Perferendis quas aut eveniet quia labore! Vitae tempore reprehenderit, accusantium fugit similique inventore perferendis labore earum aut ex natus illo esse voluptatibus quod in. Laudantium aliquam adipisci repudiandae earum incidunt.
-                                    Cumque distinctio, architecto, fuga dolorem a iure eaque alias, incidunt quisquam necessitatibus id qui commodi sapiente odit hic expedita illum cupiditate natus ipsam exercitationem? Laboriosam omnis perferendis velit dolorum odit.
-                                    Quasi est amet adipisci vel ipsam facere quidem. Harum dolor, aliquid natus dolores nobis deserunt dolorem consectetur laborum aut quisquam aperiam quasi doloribus! Accusantium repellendus vero nulla ullam, assumenda commodi?
-                                    Velit quis dolore ea pariatur quo architecto modi, itaque doloremque sit ad iure? Temporibus itaque, quos rem quo consequatur excepturi sunt, reiciendis aliquam nulla id consectetur, ex corrupti suscipit nisi.
-                                    Alias voluptatum vero inventore id rerum eos fugiat excepturi porro voluptates architecto sunt unde, reprehenderit deleniti voluptate quidem atque sit saepe. Nobis odio nemo vitae harum a, asperiores officia possimus!
-                                    Ab quae dolorem assumenda dicta praesentium doloremque quos temporibus quibusdam excepturi. Sapiente, eius eveniet. Voluptas, hic voluptate saepe officiis odit similique ipsam dolorem, incidunt ipsum non ex eos repellendus culpa?
-                                    Dignissimos obcaecati modi explicabo quam, laboriosam aut illo iure officia suscipit aliquid nesciunt debitis sunt numquam ipsam aspernatur inventore vel praesentium odit. Aliquam, cupiditate deserunt adipisci delectus sit asperiores possimus.
-                                    Praesentium, aperiam quae eveniet veritatis illum dolore fugiat ab odit dolorem eaque harum sapiente quisquam libero deleniti aut, nisi exercitationem fugit perferendis iure suscipit laudantium perspiciatis? Adipisci neque blanditiis ullam?
-                                    Similique impedit aspernatur, nesciunt, dolorum sunt deserunt nam aut, iste quis rem fuga eius cumque aliquam amet necessitatibus delectus nostrum sit nobis quas. Sequi, reiciendis harum distinctio quia autem et.
-                                    Sapiente voluptatibus ducimus laborum, neque temporibus omnis ipsum culpa repellendus non deleniti minima in, sunt nemo rerum pariatur saepe aspernatur velit ipsam quis iure obcaecati recusandae dolor! Architecto, repellat itaque!
-                                    Quos enim molestiae placeat quas dicta excepturi facilis ea sapiente alias, delectus non ducimus similique, debitis necessitatibus nihil! Est aspernatur tempora nobis distinctio iste in dicta molestias id earum sequi.
-                                    Repudiandae ipsa quia id deserunt ad molestiae porro, quisquam culpa alias ipsam ratione consequatur nemo praesentium quibusdam vero odio neque eveniet sequi, quis, exercitationem similique! At voluptatum odio distinctio eos.
-                                    Assumenda neque odio similique quisquam atque molestias ad sit laudantium? Dolor nesciunt enim officia a suscipit necessitatibus consectetur, omnis sed esse corporis quidem pariatur aspernatur! Aliquid temporibus odit quidem quae.
-                                    Totam quo praesentium, cumque deleniti sint cupiditate dicta, tempora provident dolorum labore ratione voluptatum ullam aut voluptatem, obcaecati incidunt sed enim aspernatur iste alias eligendi. Inventore, quisquam. Aut, nobis officiis.
-                                    Odio in perspiciatis atque aspernatur neque. Neque molestiae, minus amet autem quas soluta nam, debitis sed possimus excepturi, nihil veniam fugit rerum eum nostrum maxime cum delectus consequatur praesentium incidunt.Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti pariatur fuga corrupti a officia beatae, necessitatibus earum dicta. Quam neque ipsa voluptas doloribus accusantium maiores dicta quis optio odio delectus.
-                                    Fuga repellat sapiente, ab quaerat nesciunt illo pariatur perferendis voluptatibus similique maxime amet temporibus aut dignissimos nobis quam adipisci aspernatur deserunt fugiat repellendus animi, est sint? Voluptatibus explicabo voluptatem eius.
-                                    Facere quam eius odio optio quibusdam? Vitae voluptate rerum deserunt nobis blanditiis alias dolores ex ipsum libero enim aliquam illum soluta illo officiis quo, debitis, ad voluptatum impedit a veniam.
-                                    Doloremque illum sequi architecto quis atque quod tempora excepturi unde ipsa amet. Error natus non architecto quasi laborum officia debitis aliquid reprehenderit velit, qui sed quos cumque ipsum voluptate doloribus.
-                                    Corrupti odio architecto quaerat, tempore, magni distinctio consectetur incidunt perspiciatis necessitatibus exercitationem, id deserunt quos nam! Corrupti voluptas nostrum velit cupiditate, minima necessitatibus temporibus, fugit exercitationem, nulla ut delectus sit.
-                                    Perferendis quas aut eveniet quia labore! Vitae tempore reprehenderit, accusantium fugit similique inventore perferendis labore earum aut ex natus illo esse voluptatibus quod in. Laudantium aliquam adipisci repudiandae earum incidunt.
-                                    Cumque distinctio, architecto, fuga dolorem a iure eaque alias, incidunt quisquam necessitatibus id qui commodi sapiente odit hic expedita illum cupiditate natus ipsam exercitationem? Laboriosam omnis perferendis velit dolorum odit.
-                                    Quasi est amet adipisci vel ipsam facere quidem. Harum dolor, aliquid natus dolores nobis deserunt dolorem consectetur laborum aut quisquam aperiam quasi doloribus! Accusantium repellendus vero nulla ullam, assumenda commodi?
-                                    Velit quis dolore ea pariatur quo architecto modi, itaque doloremque sit ad iure? Temporibus itaque, quos rem quo consequatur excepturi sunt, reiciendis aliquam nulla id consectetur, ex corrupti suscipit nisi.
-                                    Alias voluptatum vero inventore id rerum eos fugiat excepturi porro voluptates architecto sunt unde, reprehenderit deleniti voluptate quidem atque sit saepe. Nobis odio nemo vitae harum a, asperiores officia possimus!
-                                    Ab quae dolorem assumenda dicta praesentium doloremque quos temporibus quibusdam excepturi. Sapiente, eius eveniet. Voluptas, hic voluptate saepe officiis odit similique ipsam dolorem, incidunt ipsum non ex eos repellendus culpa?
-                                    Dignissimos obcaecati modi explicabo quam, laboriosam aut illo iure officia suscipit aliquid nesciunt debitis sunt numquam ipsam aspernatur inventore vel praesentium odit. Aliquam, cupiditate deserunt adipisci delectus sit asperiores possimus.
-                                    Praesentium, aperiam quae eveniet veritatis illum dolore fugiat ab odit dolorem eaque harum sapiente quisquam libero deleniti aut, nisi exercitationem fugit perferendis iure suscipit laudantium perspiciatis? Adipisci neque blanditiis ullam?
-                                    Similique impedit aspernatur, nesciunt, dolorum sunt deserunt nam aut, iste quis rem fuga eius cumque aliquam amet necessitatibus delectus nostrum sit nobis quas. Sequi, reiciendis harum distinctio quia autem et.
-                                    Sapiente voluptatibus ducimus laborum, neque temporibus omnis ipsum culpa repellendus non deleniti minima in, sunt nemo rerum pariatur saepe aspernatur velit ipsam quis iure obcaecati recusandae dolor! Architecto, repellat itaque!
-                                    Quos enim molestiae placeat quas dicta excepturi facilis ea sapiente alias, delectus non ducimus similique, debitis necessitatibus nihil! Est aspernatur tempora nobis distinctio iste in dicta molestias id earum sequi.
-                                    Repudiandae ipsa quia id deserunt ad molestiae porro, quisquam culpa alias ipsam ratione consequatur nemo praesentium quibusdam vero odio neque eveniet sequi, quis, exercitationem similique! At voluptatum odio distinctio eos.
-                                    Assumenda neque odio similique quisquam atque molestias ad sit laudantium? Dolor nesciunt enim officia a suscipit necessitatibus consectetur, omnis sed esse corporis quidem pariatur aspernatur! Aliquid temporibus odit quidem quae.
-                                    Totam quo praesentium, cumque deleniti sint cupiditate dicta, tempora provident dolorum labore ratione voluptatum ullam aut voluptatem, obcaecati incidunt sed enim aspernatur iste alias eligendi. Inventore, quisquam. Aut, nobis officiis.
-                                    Odio in perspiciatis atque aspernatur neque. Neque molestiae, minus amet autem quas soluta nam, debitis sed possimus excepturi, nihil veniam fugit rerum eum nostrum maxime cum delectus consequatur praesentium incidunt.</div>
+                                <div class="posts">
+                                    <div class="posts__block">
+                                        <ul class="posts__block-list">
+                                            <a href=""><span>Все посты</span></a>
+                                            <a href=""><span>Мои посты</span></a>
+                                            <a href=""><span>Архив постов</span></a>
+                                        </ul>
+                                        <div class="posts__block-search"><img src="/img/icons/search-icon.png" alt=""></div>
+                                    </div>
+                                    <div class="posts__element">
+                                        <div class="posts__element-head">
+                                            <img class="posts__element-head-avatar" src="/img/photo/avatar-profile.jpg" alt="">
+                                            <span class="posts__element-head-title">Данил Колесников <img src="/img/profile-status.png" alt=""></span>
+                                            <div class="posts__element-head-icons">
+                                                <img src="" alt="">
+                                            </div>
+                                        </div>
+                                        <div class="posts__element-content">
+                                            <img src="/img/photo/avatar-profile.jpg" alt="" class="posts__element-content-photo">
+                                            <div class="posts__element-content-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum commodi nam voluptatum hic alias, aliquid veritatis officiis omnis unde cumque possimus, blanditiis, esse incidunt eius sit praesentium distinctio eum. Quae?</div>
+                                        </div>
+                                        <div class="posts__element-footer"></div>
+                                    </div>
+                                </div>
                             </div>
                             <div class="aside">   
                                 <div class="friends">
@@ -317,8 +301,6 @@
                 </div>
             </div>
         </div> 
-
-        <script> src="js/script.js"</script>
     </body>
 <html>
 
