--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
                             <span>Неизвестен — Неизвестный трек</span>
                         </div>
                     </div>
+                    <div class="header__musik--mobile">
+                        <img src="/img/icons/music-icon.png" alt="notification" >
+                    </div>
                     <a class="header__profile">
                         <img src="/img/photo/avatar-profile.jpg" alt="" >
                     </a>
@@ -147,7 +150,7 @@
                             </div>
                             <div class="profile-button ">
                                     <button><span>Редактировать профиль</span></button>
-                                    <button><span>Ещё</span></button>
+                                    <button class="profile-button--dop"><span>Ещё</span></button>
                             </div>
                         </div>
                     </div>
