--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                                         </div>
                                         <div class="posts__element-content">
                                             <img src="/img/photo/avatar-profile.jpg" alt="" class="posts__element-content-photo">
-                                            <div class="posts__element-content-text">Где вы лучше всего воспринимаете информацию? Этот вопрос возник неста, поскольку 👉🏻➡ Я вообще в целом люблю когда следят за моей жизнью (новостями, работами, проектами) , особенно люди близкие мне по каким-то критериям, по духу например, ну возникла необходимость создать</div>
+                                            <p class="posts__element-content-text">Где вы лучше всего воспринимаете информацию? Этот вопрос возник неста, поскольку 👉🏻➡ Я вообще в целом люблю когда следят за моей жизнью (новостями, работами, проектами) , особенно люди близкие мне по каким-то критериям, по духу например, ну возникла необходимость создать</p>
                                         </div>
                                         <div class="posts__element-footer">
                                             <div class="posts__element-footer-likes">
@@ -389,7 +389,7 @@
                                             </div>
                                         </div>
                                         <div class="posts__element-content">
-                                            <div class="posts__element-content-text">Где вы лучше всего воспринимаете информацию? Этот вопрос возник неста, поскольку 👉🏻➡ Я вообще в целом люблю когда следят за моей жизнью (новостями, работами, проектами) , особенно люди близкие мне по каким-то критериям, по духу например, ну возникла необходимость создать</div>
+                                            <p class="posts__element-content-text">Где вы лучше всего воспринимаете информацию? Этот вопрос возник неста, поскольку 👉🏻➡ Я вообще в целом люблю когда следят за моей жизнью (новостями, работами, проектами) , особенно люди близкие мне по каким-то критериям, по духу например, ну возникла необходимость создать</p>
                                         </div>
                                         <div class="posts__element-footer">
                                             <div class="posts__element-footer-likes">
@@ -442,18 +442,26 @@
                                         <div class="friends__online-wrapper-item">
                                             <img src="/img/photo/friends-avatar.jpg" alt="" >
                                             <div>Иван</div>
+                                            <div class="friends__online-wrapper-item-desk"></div>
                                         </div>
                                         <div class="friends__online-wrapper-item">
                                             <img src="/img/photo/friends-avatar.jpg" alt="" >
                                             <div>Дарьянчбеквар</div>
+                                            <div class="friends__online-wrapper-item-mobile">
+                                                <div></div>
+                                            </div>
                                         </div>
                                         <div class="friends__online-wrapper-item">
                                             <img src="/img/photo/friends-avatar.jpg" alt="" >
                                             <div>Баклан</div>
+                                            <div class="friends__online-wrapper-item-desk"></div>
                                         </div>
                                         <div class="friends__online-wrapper-item">
                                             <img src="/img/photo/friends-avatar.jpg" alt="" >
                                             <div>Вован</div>
+                                            <div class="friends__online-wrapper-item-mobile">
+                                                <div></div>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="friends-line"></div>
